[package]
name = "liquidity_pool"
version = "0.1.0"
edition = "2024"
autobins = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "23.4.0"
num-derive = "0.4"
num-traits = { version = "0.2", default-features = false }
num-integer = { version = "0.1.45", default-features = false, features = ["i128"] }

[dev-dependencies]
soroban-sdk = { version = "23.4.0", features = ["testutils"] }

[profile.release]
overflow-checks = true

